--- a/src/css/index.css
+++ b/src/css/index.css
@@ -201,6 +201,60 @@
     margin-bottom: 12px;
 }
 
+.login-form-container {
+
+    padding-top: 100px;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 20px;
+}
+
+
+.login-form {
+
+    position: relative;
+    z-index: 1;
+    background: #FFFFFF;
+    max-width: 360px;
+    margin: 15px auto 100px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.login-form input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+
+.login-form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #f08804;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+
+.login-form button:hover,.form button:active,.form button:focus {
+    background: #43A047;
+}
+
+
+
 .product{
 
     background-color: #ccc;
@@ -313,11 +367,11 @@ table {
     outline: 0;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 600px) {
 
     .cart-search-input{
 
-        width: 100px;
+        width: 150px;
     }
 
     .cart-container.visible {
