--- a/src/css/index.css
+++ b/src/css/index.css
@@ -250,7 +250,7 @@
 
 
 .login-form button:hover,.form button:active,.form button:focus {
-    background: #43A047;
+    background: #f06700;
 }
 
 .login-failed-input{
